OMS with TNA new system  bug-fix need

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=NTG
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:MY3ep9s6VHe0Fn5qhAeriwAaFLNnYXzrDL3Obc+ZI4I=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,12 +8,29 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=ntg_template
+# DB_USERNAME=root
+# DB_PASSWORD=
+
+DB_CONNECTION=sqlsrv 
+DB_HOST=49.0.39.93
+DB_PORT=1433
 DB_DATABASE=FAL_TNA
-DB_USERNAME=root
-DB_PASSWORD=
+# DB_DATABASE=SPA_CRUD
+DB_USERNAME=sa
+DB_PASSWORD=N@hid2023
+
+# DB_CONNECTION=oracle
+# # DB_TNS=//WIN-7IPS3Q61UV1:1521/basicdb
+# DB_HOST=WIN-7IPS3Q61UV1
+# DB_PORT=1521
+# DB_DATABASE=basicdb
+# DB_USERNAME=til
+# DB_PASSWORD=til
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
