--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "components/jquery": "^3.7",
-        "components/jqueryui": "^1.12",
         "doctrine/dbal": "^3.5",
-        "fortawesome/font-awesome": "^6.6",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/breeze": "1.9.2",
@@ -17,9 +14,7 @@
         "laravel/sanctum": "2.15.1",
         "laravel/tinker": "^2.5",
         "myclabs/php-enum": "^1.8",
-        "select2/select2": "^4.0",
-        "twbs/bootstrap": "5.3.3",
-        "twbs/bootstrap-icons": "^1.11"
+        "twbs/bootstrap": "5.3.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
