OMS with TNA v2 pre-ready

--- a/.env
+++ b/.env
@@ -18,8 +18,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=sqlsrv 
 DB_HOST=49.0.39.93
 DB_PORT=1433
-DB_DATABASE=FAL_TNA
-# DB_DATABASE=SPA_CRUD
+# DB_DATABASE=FAL_TNA
+DB_DATABASE=SPA_CRUD
 DB_USERNAME=sa
 DB_PASSWORD=N@hid2023
 
