--- a/.env
+++ b/.env
@@ -46,12 +46,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=mail.ntg.com.bd
+MAIL_PORT=465 
+MAIL_USERNAME=mis@ntg.com.bd
+MAIL_PASSWORD=pQqwxb432@@1
+MAIL_ENCRYPTION=SSL
+MAIL_FROM_ADDRESS=mis@ntg.com.bd
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
