--- a/.env
+++ b/.env
@@ -15,6 +15,22 @@ LOG_LEVEL=debug
 # DB_USERNAME=root
 # DB_PASSWORD=
 
+DB_CONNECTION=sqlsrv 
+DB_HOST=49.0.39.93
+DB_PORT=1433
+DB_DATABASE=FAL_TNA
+# DB_DATABASE=SPA_CRUD
+DB_USERNAME=sa
+DB_PASSWORD=N@hid2023
+
+# DB_CONNECTION=oracle
+# # DB_TNS=//WIN-7IPS3Q61UV1:1521/basicdb
+# DB_HOST=WIN-7IPS3Q61UV1
+# DB_PORT=1521
+# DB_DATABASE=basicdb
+# DB_USERNAME=til
+# DB_PASSWORD=til
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,6 +45,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+MAIL_MAILER=smtp
+MAIL_HOST=mail.ntg.com.bd
+MAIL_PORT=465 
+MAIL_USERNAME=mis@ntg.com.bd
+MAIL_PASSWORD=pQqwxb432@@1
+MAIL_ENCRYPTION=SSL
+MAIL_FROM_ADDRESS=mis@ntg.com.bd
+MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
