--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "2.15.1",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "myclabs/php-enum": "^1.8",
+        "phpoffice/phpspreadsheet": "^1.29",
         "twbs/bootstrap": "5.3.3"
     },
     "require-dev": {
